networking/colors-namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: red-blue 
---
apiVersion: v1
kind: Namespace
metadata:
  name: black-white 
---
