networking/networkpolicy_allow_all_traffic_to_red.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-traffic-to-red
  namespace: red-blue
spec:
  podSelector:
    matchLabels:
      color: red
  ingress:
  - {}
