networking/networkpolicy_allow_only_black2red_non_red-blue_namespace.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-red2blue
  namespace: red-blue
spec:
  podSelector:
    matchLabels:
      color: red
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          color: blue
    ports:
    - protocol: TCP
      port: 80          
  egress:
  - to:
    - podSelector:
        matchLabels:
          color: blue  
    ports:
    - protocol: TCP
      port: 80
