networking/networkpolicy_disallow_non_red-blue_traffic.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: red-blue
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
