networking/networkpolicy_red2blue.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-red2blue
  namespace: red-blue
spec:
  podSelector:
    matchLabels:
      color: red
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    # - ipBlock:
    #     cidr: 172.17.0.0/16
    #     except:
    #     - 172.17.1.0/24
    # - namespaceSelector:
    #     matchLabels:
    #       colors: red-blue
    - podSelector:
        matchLabels:
          color: blue
    # ports:
    # - protocol: TCP
    #   port: 80
  egress:
  - to:
  #   - ipBlock:
  #       cidr: 10.0.0.0/24
    - podSelector:
        matchLabels:
          color: blue  
    # ports:
    # - protocol: TCP
    #   port: 80
